--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@hyperswarm/network",
-  "version": "2.1.0",
-  "description": "The networking guts of Hyperswarm",
+  "name": "spacenetwork",
+  "version": "0.0.1",
+  "description": "The networking guts of Spaceswarm",
   "main": "index.js",
   "scripts": {
     "test": "tap -T test/*.test.js && standard --fix",
@@ -10,10 +10,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hyperswarm/network.git"
+    "url": "git+https://github.com/samooth/spacenetwork.git"
   },
   "keywords": [
-    "hyperswarm",
+    "spaceswarm",
     "networking",
     "p2p",
     "network"
@@ -24,19 +24,19 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/hyperswarm/network/issues"
+    "url": "https://github.com/samooth/spacenetwork/issues"
   },
-  "homepage": "https://github.com/hyperswarm/network#readme",
+  "homepage": "https://github.com/samooth/spacenetwork#readme",
   "dependencies": {
-    "@hyperswarm/discovery": "^2.0.0",
+    "spaceswarm-discovery": "latest",
     "nanoresource": "^1.3.0",
-    "utp-native": "^2.2.1"
+    "utp-native": "^2.5.3"
   },
   "devDependencies": {
-    "@hyperswarm/dht": "^4.0.0",
+    "spacedht": "latest",
     "events.once": "^2.0.2",
-    "get-port": "^5.0.0",
-    "standard": "^12.0.1",
-    "tap": "^12.6.6"
+    "get-port": "^7.1.0",
+    "standard": "^17.1.2",
+    "tap": "^21.1.0"
   }
 }
